usr/src/tools/ctf/cvt/output.c
@@ -456,7 +456,6 @@ write_file(Elf *src, const char *srcname, Elf *dst, const char *dstname,
 	off_t new_offset = 0;
 	off_t ctfnameoff = 0;
 	int dynsym = (flags & CTF_USE_DYNSYM);
-	int keep_stabs = (flags & CTF_KEEP_STABS);
 	int *secxlate;
 	int srcidx, dstidx;
 	int curnmoff = 0;
@@ -505,12 +504,6 @@ write_file(Elf *src, const char *srcname, Elf *dst, const char *dstname,
 		}
 
 		if (strcmp(sname, CTF_ELF_SCN_NAME) == 0) {
-			secxlate[srcidx] = -1;
-		} else if (!keep_stabs &&
-		    (strncmp(sname, ".stab", 5) == 0 ||
-		    strncmp(sname, ".debug", 6) == 0 ||
-		    strncmp(sname, ".rel.debug", 10) == 0 ||
-		    strncmp(sname, ".rela.debug", 11) == 0)) {
 			secxlate[srcidx] = -1;
 		} else if (dynsym && shdr.sh_type == SHT_SYMTAB) {
 			/*
